Implementing service & impl for saving & getting files & other.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,5 +11,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        format_sql: true  # Corrected property name from format-sql to format_sql
+        format_sql: true  
 
+project:
+  poster: posters/
